Nascente Rio Lis

--- a/events/corrida-adepto.html
+++ b/events/corrida-adepto.html
@@ -154,7 +154,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0444.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_01_27_0444"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -167,7 +167,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0448.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_01_27_0448"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -180,7 +180,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0451.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_01_27_0451"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -193,7 +193,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0453.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_01_27_0453"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -206,7 +206,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0460.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_01_27_0460"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -233,7 +233,7 @@
                   <img src="../assets/img/portfolio/corrida-adepto/2024_01_27_0467.jpg" class="img-fluid" alt="">
                   <div class="portfolio-links">
                     <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0467.jpg" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox" title="2024_01_27_0467"><i class="bx bx-plus"></i></a>
+                      class="portfolio-lightbox" title="2024_01_27_0467"><i class="bx bx-window-open"></i></a>
                   </div>
                 </div>
               </div>
@@ -277,7 +277,7 @@
                   <img src="../assets/img/portfolio/corrida-adepto/2024_01_27_0471.jpg" class="img-fluid" alt="">
                   <div class="portfolio-links">
                     <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0471.jpg" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox" title="2024_01_27_0471"><i class="bx bx-plus"></i></a>
+                      class="portfolio-lightbox" title="2024_01_27_0471"><i class="bx bx-window-open"></i></a>
                   </div>
                 </div>
               </div>
@@ -299,7 +299,7 @@
                   <div class="portfolio-links">
                     <a href="../assets/img/portfolio/corrida-adepto/2024-01-27.09.38.42.jpeg"
                       data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024-01-27.09.38.42"><i
-                        class="bx bx-plus"></i></a>
+                        class="bx bx-window-open"></i></a>
                   </div>
                 </div>
               </div>
@@ -343,7 +343,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024-01-27.09.37.11.jpeg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024-01-27.09.37.11"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -356,7 +356,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0477.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_01_27_0477"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -369,7 +369,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0482.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_01_27_0482"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -382,7 +382,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0495.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_01_27_0495"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -395,7 +395,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0500.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_01_27_0500"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -408,7 +408,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/corrida-adepto/2024_01_27_0508.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_01_27_0508"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
