--- a/events/fatima-12-maio.html
+++ b/events/fatima-12-maio.html
@@ -149,7 +149,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1810.jpg"
                         data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_05_12_1810"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -176,7 +176,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1811.jpg"
                         data-gallery="portfolioGallery-1" class="portfolio-lightbox" title="2024_05_12_1811"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -189,7 +189,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1826.jpg"
                         data-gallery="portfolioGallery-1" class="portfolio-lightbox" title="2024_05_12_1826"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -202,7 +202,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1828.jpg"
                         data-gallery="portfolioGallery-1" class="portfolio-lightbox" title="2024_05_12_1828"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -215,7 +215,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1837.jpg"
                         data-gallery="portfolioGallery-1" class="portfolio-lightbox" title="2024_05_12_1837"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -229,7 +229,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1880.jpg"
                         data-gallery="portfolioGallery-1" class="portfolio-lightbox" title="2024_05_12_1880"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -242,7 +242,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1881.jpg"
                         data-gallery="portfolioGallery-1" class="portfolio-lightbox" title="2024_05_12_1881"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -272,7 +272,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/2024_05_12_1841.jpg"
                         data-gallery="portfolioGallery-3" class="portfolio-lightbox" title="2024_05_12_1841"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -285,7 +285,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1838.jpg"
                         data-gallery="portfolioGallery-3" class="portfolio-lightbox" title="2024_05_12_1838"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -298,7 +298,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1842.jpg"
                         data-gallery="portfolioGallery-3" class="portfolio-lightbox" title="2024_05_12_1842"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -311,7 +311,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1823.jpg"
                         data-gallery="portfolioGallery-3" class="portfolio-lightbox" title="2024_05_12_1823"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -324,7 +324,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1814.jpg"
                         data-gallery="portfolioGallery-3" class="portfolio-lightbox" title="2024_05_12_1814"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -351,7 +351,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1847.jpg"
                         data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_05_12_1847"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -364,7 +364,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1854.jpg"
                         data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_05_12_1854"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -377,7 +377,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1855.jpg"
                         data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_05_12_1855"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -390,7 +390,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1863.jpg"
                         data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_05_12_1863"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -403,7 +403,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1867.jpg"
                         data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_05_12_1867"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -416,7 +416,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1865.jpg"
                         data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2024_05_12_1865"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -444,7 +444,7 @@
                   <div class="portfolio-links">
                     <a href="../assets/img/portfolio/fatima-12-maio/2024_05_12_1873.jpg"
                       data-gallery="portfolioGallery-5" class="portfolio-lightbox" title="2024_05_12_1873"><i
-                        class="bx bx-plus"></i></a>
+                        class="bx bx-window-open"></i></a>
                   </div>
                 </div>
               </div>
