--- a/events/meia-maratona.html
+++ b/events/meia-maratona.html
@@ -152,7 +152,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/meia-maratona/2023-10-22.09.29.49.jpeg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2023-10-22.09.29.49"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -166,7 +166,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/meia-maratona/2023-10-22.10.11.00.jpeg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2023-10-22.10.11.00"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -180,7 +180,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/meia-maratona/2023-10-22.09.39.09.jpeg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2023-10-22.09.39.09"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -214,7 +214,7 @@
                   <div class="portfolio-links">
                     <a href="../assets/img/portfolio/meia-maratona/hes20231022048g04456-1.jpg"
                       data-gallery="portfolioGallery" class="portfolio-lightbox" title="hes20231022048g04456-1"><i
-                        class="bx bx-plus"></i></a>
+                        class="bx bx-window-open"></i></a>
                   </div>
                 </div>
               </div>
