--- a/events/serra-estrela.html
+++ b/events/serra-estrela.html
@@ -155,7 +155,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_083200.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_083200"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -168,7 +168,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_101714.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_101714"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -182,7 +182,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_101802.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_101802"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -196,7 +196,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_102631.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_102631"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -209,7 +209,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_104835.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_104835"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -222,7 +222,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_105816.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_105816"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -236,7 +236,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_105902.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_105902"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -249,7 +249,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_110216.jpg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="IMG_20240213_110216"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -278,7 +278,7 @@
                   <div class="portfolio-links">
                     <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_111646.jpg"
                       data-gallery="portfolioGallery" class="portfolio-lightbox" title="IMG_20240213_111646"><i
-                        class="bx bx-plus"></i></a>
+                        class="bx bx-window-open"></i></a>
                   </div>
                 </div>
               </div>
@@ -315,7 +315,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_114007.jpg"
                         data-gallery="portfolioGallery-3" class="portfolio-lightbox" title="IMG_20240213_114007"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -328,7 +328,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_114520.jpg"
                         data-gallery="portfolioGallery-3" class="portfolio-lightbox" title="IMG_20240213_114520"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -355,7 +355,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_120641.jpg"
                         data-gallery="portfolioGallery-4" class="portfolio-lightbox" title="IMG_20240213_120641"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -368,7 +368,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_120656.jpg"
                         data-gallery="portfolioGallery-4" class="portfolio-lightbox" title="IMG_20240213_120656"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -412,7 +412,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_121457.jpg"
                         data-gallery="portfolioGallery-5" class="portfolio-lightbox" title="IMG_20240213_121457"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -426,7 +426,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_131124.jpg"
                         data-gallery="portfolioGallery-5" class="portfolio-lightbox" title="IMG_20240213_131124"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -441,7 +441,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/2024_02_13_0583.jpg"
                         data-gallery="portfolioGallery-5" class="portfolio-lightbox" title="2024_02_13_0583"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -469,7 +469,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_141401.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_141401"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -482,7 +482,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_141405.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_141405"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -496,7 +496,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_141501.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_141501"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -509,7 +509,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_141515.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_141515"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -523,7 +523,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_141655.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_141655"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -537,7 +537,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_141747.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_141747"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -551,7 +551,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_141940.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_141940"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -565,7 +565,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_142246.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_142246"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -579,7 +579,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_142548.jpg"
                         data-gallery="portfolioGallery-6" class="portfolio-lightbox" title="IMG_20240213_142548"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -625,7 +625,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_150636.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_150636"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -638,7 +638,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_151355.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_151355"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -652,7 +652,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_152022.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_152022"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -666,7 +666,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_153239.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_153239"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -680,7 +680,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_153411.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_153411"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -695,7 +695,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_153452.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_153452"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -709,7 +709,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_153537.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_153537"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -723,7 +723,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_154124.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_154124"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
@@ -737,7 +737,7 @@
                     <div class="portfolio-links">
                       <a href="../assets/img/portfolio/serra-estrela/IMG_20240213_160550.jpg"
                         data-gallery="portfolioGallery-7" class="portfolio-lightbox" title="IMG_20240213_160550"><i
-                          class="bx bx-plus"></i></a>
+                          class="bx bx-window-open"></i></a>
                     </div>
                   </div>
                 </div>
