--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -151,7 +151,7 @@
                   <img src="../assets/img/portfolio/world-hans-zimmer/ticket.jpg" class="img-fluid" alt="">
                   <div class="portfolio-links">
                     <a href="../assets/img/portfolio/world-hans-zimmer/ticket.jpg" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox" title="Ticket"><i class="bx bx-plus"></i></a>
+                      class="portfolio-lightbox" title="Ticket"><i class="bx bx-window-open"></i></a>
                   </div>
                 </div>
               </div>
@@ -190,7 +190,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_0989.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_0989"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -203,7 +203,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_0990.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_0990"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -216,7 +216,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_0991.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_0991"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -229,7 +229,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_0994.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_0994"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -242,7 +242,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_0995.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_0995"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -255,7 +255,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_0996.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_0996"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -268,7 +268,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_0999.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_0999"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -281,7 +281,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_1000.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_1000"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -294,7 +294,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_1008.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_1008"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -307,7 +307,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_1013.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_1013"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
@@ -320,7 +320,7 @@
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/world-hans-zimmer/2024_04_27_1017.jpg"
                           data-gallery="portfolioGallery" class="portfolio-lightbox" title="2024_04_27_1017"><i
-                            class="bx bx-plus"></i></a>
+                            class="bx bx-window-open"></i></a>
                       </div>
                     </div>
                   </div>
