--- a/index.html
+++ b/index.html
@@ -281,11 +281,22 @@
           
           <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/nascente-rio-liz/2024_05_30_1920.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/nascente-rio-liz/2024_05_30_1920.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="Nascente Rio Liz - Mai 30, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/nascente-rio-liz.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
               <img src="assets/img/portfolio/festa-das-rosas/2024_05_11_1737.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/festa-das-rosas/2024_05_11_1737.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Festa das Rosas - Mai 11, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/festa-das-rosas.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="Festa das Rosas - Mai 11, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/festa-das-rosas.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -295,9 +306,8 @@
               <img src="assets/img/portfolio/corrida-adepto/1.JPG" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/corrida-adepto/1.JPG" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Corrida do Adepto (10K) - Jan 27, 2024"><i
-                    class="bx bx-plus"></i></a>
-                <a href="events/corrida-adepto.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="Corrida do Adepto (10K) - Jan 27, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/corrida-adepto.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -307,8 +317,8 @@
               <img src="assets/img/portfolio/world-hans-zimmer/2024_04_27_1005.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/world-hans-zimmer/2024_04_27_1005.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="The World of Hans Zimmer - Abr 27, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/world-of-hans-zimmer.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="The World of Hans Zimmer - Abr 27, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/world-of-hans-zimmer.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -318,8 +328,8 @@
               <img src="assets/img/portfolio/beja/2024_02_17_0609.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/beja/2024_02_17_0609.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Amêndoas em Flor/Beja Fev 18, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/beja.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="Amêndoas em Flor/Beja Fev 18, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/beja.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -329,7 +339,7 @@
               <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-window-open"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -339,8 +349,8 @@
               <img src="assets/img/portfolio/serra-estrela/2024_02_13_0583.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/serra-estrela/2024_02_13_0583.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Serra da Estrela - Fev 13, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/serra-estrela.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="Serra da Estrela - Fev 13, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/serra-estrela.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -350,9 +360,8 @@
               <img src="assets/img/portfolio/meia-maratona/1.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/meia-maratona/1.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Meia Maratona Leiria (10K) - Out 22, 2023"><i
-                    class="bx bx-plus"></i></a>
-                <a href="events/meia-maratona.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="Meia Maratona Leiria (10K) - Out 22, 2023"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/meia-maratona.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -364,7 +373,7 @@
               <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Web 2"><i class="bx bx-window-open"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -375,7 +384,7 @@
               <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="App 3"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="App 3"><i class="bx bx-window-open"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -387,8 +396,8 @@
               <img src="assets/img/portfolio/50-anos-25abril-Leiria/2024_04_25_0938.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/50-anos-25abril-Leiria/2024_04_25_0938.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="50 Anos 25 Abril - Leiria, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/50-anos-25abril-leiria.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="50 Anos 25 Abril - Leiria, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/50-anos-25abril-leiria.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -399,8 +408,8 @@
               <img src="assets/img/portfolio/fatima-12-maio/2024_05_12_1822.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/fatima-12-maio/2024_05_12_1822.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="12 Maio em Fátima - Mai 12, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/fatima-12-maio.html" title="Detalhes"><i class="bx bx-link"></i></a>
+                  class="portfolio-lightbox" title="12 Maio em Fátima - Mai 12, 2024"><i class="bx bx-info-circle"></i><br><span id="text-small">Info</span></a>
+                <a href="events/fatima-12-maio.html" title="Detalhes"><i class="bx bx-slideshow"></i><br><span id="text-small">Visitar</span></a>
               </div>
             </div>
           </div>
@@ -410,7 +419,7 @@
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/portfolio-9.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="Web 3"><i class="bx bx-window-open"></i></a>
                 <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
@@ -442,6 +451,7 @@
                 <h6><b>Canon EOS M50 Mark II</b> </h6>
                 <li><small><i>EF-M 15-45mm f/3.5-6.3 IS STM</i></small></li>
                 <li><small><i>Sigma 56mm F1.4 DC DN Contemporary</i></small></li>
+                <li><small><i>Canon EF-S 18-135mm IS STM</i></small></li>
               </ul>
             </p>
           </div>
